# Proyecto_2_PDI

./: CMakeLists.txt  Informe Proyecto 2.docx  Proyecto_2_PDI.rar  README.md  carga_4D_nifti.py  rutinaCompleta.py  ~$forme Proyecto 2.docx  ~WRL1733.tmp
Hello/HelloPython/: HelloPython.py
PDI_2/: CMakeLists.txt  PDI_2.py
PDI_2/Resources/UI/: PDI_2.ui
